Fixed new file creation and git config.

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,11 @@ commands =
     sphinx-build -b html docs docs/html
     tyrannosaurus clean
 
+
+[coverage:html]
+directory = .coverage_report
+
+
 [flake8]
 max-line-length = 100
 # black contradicts W503
