--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,6 +138,7 @@ xdoctest                 = "^0.12"
 hypothesis               = "^5.10"
 flake8-bandit            = "^2.1"
 flake8-bugbear           = "^20.1"
+coveralls                = "^2.0"
 
 
 [tool.poetry.extras]
