--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ envlist = py38
 [testenv]
 whitelist_externals = poetry
 skipdist = True
+# the - prefix means ignore nonzero exit codes
 commands =
     tyrannosaurus sync
     poetry check
@@ -14,6 +15,7 @@ commands =
     poetry build
     poetry install -v
     poetry run pytest --cov
+    - coveralls
     - poetry run flake8 tyrannosaurus
     - poetry run flake8 docs
     - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101 tests
