Fixed several bugs.

--- a/tyrannosaurus/resources/tox.ini
+++ b/tyrannosaurus/resources/tox.ini
@@ -16,7 +16,7 @@ commands =
     poetry install -v
     poetry run pytest --cov
     - coveralls
-    - poetry run flake8 tyrannosaurus
+    - poetry run flake8 ${pkg}
     - poetry run flake8 docs
     - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101 tests
     sphinx-build -b html docs docs/html
@@ -24,7 +24,7 @@ commands =
 
 
 [coverage:run]
-source = 'tyrannosaurus'
+source = '${pkg}'
 
 [coverage:html]
 directory = .coverage_report
