--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,6 +117,7 @@ python                   = ">=3.7, <4"
 tomlkit                  = "^0.6.0"
 importlib-metadata       = "^1.6"
 typer                    = "^0.2"
+shellingham              = "^1.3"
 requests                 = "^2.23"
 grayskull                = "^0.4"
 
