A few accumulated changes. Fixed small bugs.

--- a/tyrannosaurus/resources/tox.ini
+++ b/tyrannosaurus/resources/tox.ini
@@ -5,7 +5,9 @@ isolated_build = True
 envlist = py38
 
 [testenv]
-whitelist_externals = poetry
+whitelist_externals =
+    poetry
+    tyrannosaurus
 skipdist = True
 # the - prefix means ignore nonzero exit codes
 commands =
