--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ build-backend = "poetry.masonry.api"
 
 [tool.poetry]
 name = "tyrannosaurus"
-version = "0.5.5"
+version = "0.5.6"
 description = "Opinionated Python template and metadata synchronizer for 2020."
 authors = ["Douglas Myers-Turnbull"]
 maintainers = ["Douglas Myers-Turnbull"]
@@ -59,8 +59,8 @@ align    = true
 
 [tool.tyrannosaurus.sources]
 status             = "'Development'"
-date               = "'${today}'"
-copyright          = "'Copyright ${today.year}'"
+date               = "'2020-06-08'"
+copyright          = "'Copyright 2020'"
 version            = "tool.poetry.version"
 release            = "tool.poetry.version"
 pyversions         = "tool.poetry.dependencies"
@@ -112,24 +112,24 @@ importlib-metadata       = "^1.6"
 typer                    = "^0.2"
 shellingham              = "^1.3"
 requests                 = "^2.23"
-grayskull                = "^0.5"
+grayskull                = "^0.7"
 
 [tool.poetry.dev-dependencies]
 pre-commit               = "^2.4"
 pytest                   = "^5.4"
 coverage                 = {extras = ["toml"], version = "^5.1"}
 pytest-cov               = "^2.9"
-sphinx                   = "^3.0"
+sphinx                   = "^3.1"
 sphinx-autoapi           = "^1.3"
 sphinx-rtd-theme         = "^0.4.3"
-mypy                     = "^0.770"
+mypy                     = "^0.780"
 flake8                   = "^3.8"
 flake8-docstrings        = "^1.5"
 black                    = "=19.10b0"
 isort                    = "^4.3"
 sphinx-autodoc-typehints = "^1.10"
 xdoctest                 = "^0.12"
-hypothesis               = "^5.15"
+hypothesis               = "^5.16"
 flake8-bandit            = "^2.1"
 flake8-bugbear           = "^20.1"
 coveralls                = "^2.0"
