--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,8 @@ envlist = py38
 [testenv]
 whitelist_externals =
     poetry
-	tyrannosaurus
+    rdkit
+    tyrannosaurus
 skipdist = True
 # the - prefix means ignore nonzero exit codes
 commands =
