Start of new version.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,3 +36,7 @@ jobs:
                 name: Build the Docker image
                 run: |
                     docker build .
+            -
+                name: Run coveralls
+                run: |
+                    coveralls
