--- a/tox.ini
+++ b/tox.ini
@@ -7,10 +7,12 @@ envlist = py38
 [testenv]
 whitelist_externals =
     poetry
-    tyrannosaurus
 skipdist = True
 # the - prefix means ignore nonzero exit codes
 commands =
+    pre-commit run check-toml
+    pre-commit run check-yaml
+    pre-commit run check-json
     poetry check
     poetry build
     poetry install -v
