--- a/tyrannosaurus/resources/tox.ini
+++ b/tyrannosaurus/resources/tox.ini
@@ -11,13 +11,13 @@ whitelist_externals =
 skipdist = True
 # the - prefix means ignore nonzero exit codes
 commands =
-    tyrannosaurus sync
+    pre-commit run check-toml
+    pre-commit run check-yaml
+    pre-commit run check-json
     poetry check
-    poetry lock
     poetry build
     poetry install -v
     poetry run pytest --cov
-    - coveralls
     - poetry run flake8 ${pkg}
     - poetry run flake8 docs
     - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101 tests
