--- a/tyrannosaurus/resources/tox.ini
+++ b/tyrannosaurus/resources/tox.ini
@@ -1,13 +1,14 @@
 [tox]
-minversion = 3.14
+minversion = 3.19
+# this refers to [tool.poetry.extras.dev] in pyproject.toml
 extras = dev
 isolated_build = True
+# which Python version to use
 envlist = py38
 
 [testenv]
 whitelist_externals =
     poetry
-    tyrannosaurus
 skipdist = True
 # the - prefix means ignore nonzero exit codes
 commands =
@@ -22,7 +23,6 @@ commands =
     - poetry run flake8 docs
     - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101 tests
     sphinx-build -b html docs docs/html
-    tyrannosaurus clean
 
 
 [coverage:run]
