--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
                 name: Install build dependencies
                 run: |
                     python -m pip install --upgrade pip
-                    pip install poetry tox
+                    pip install poetry tox pre-commit
             -
                 name: Test with tox
                 run: |
