--- a/tyrannosaurus/resources/tox.ini
+++ b/tyrannosaurus/resources/tox.ini
@@ -9,6 +9,7 @@ envlist = py38
 [testenv]
 whitelist_externals =
     poetry
+    pre-commit
 skipdist = True
 # the - prefix means ignore nonzero exit codes
 commands =
