Fixed minor bugs. Made tyrannosuaurs use git checkout.

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ commands =
     poetry run pytest --cov
     - poetry run flake8 tyrannosaurus
     - poetry run flake8 docs
-    - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101 tests
+    - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293 tests
     sphinx-build -b html docs docs/html
 
 
@@ -34,8 +34,11 @@ directory = .coverage_report
 [flake8]
 max-line-length = 100
 # black contradicts W503
+# D107 is for missing docstring in __init__, which isn't a problem if the args are listed in the class docstring
 # the rest just seem overly picky, which obscures real problems
-ignore = W503,E203,E225,E301,E302,E501,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293
+# I'm ignoring D101,D102,D105 for now -- the code is in an alpha state
+# S404,S603,S607 are security issues with subprocess that are unavoidable for tyrannosaurus
+ignore = W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293,S404,S603,S607,D101,D102,D105
 doctests = true
 exclude =  .git
            __pycache__/
