--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,9 +52,12 @@ Download = "https://pypi.org/project/tyrannosaurus/"
 # Tyrannosaurus
 #########################################################################################
 
+[tool.tyrannosaurus.options]
+align = true
+
 [tool.tyrannosaurus.sources]
 status             = "'Development'"
-date               = "${today}"
+date               = "'${today}'"
 copyright          = "'Copyright 2020'"
 version            = "tool.poetry.version"
 release            = "tool.poetry.version"
