--- a/tyrannosaurus/resources/tox.ini
+++ b/tyrannosaurus/resources/tox.ini
@@ -22,7 +22,7 @@ commands =
     poetry run pytest --cov
     - poetry run flake8 ${pkg}
     - poetry run flake8 docs
-    - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101 tests
+    - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293 tests
     sphinx-build -b html docs docs/html
 
 
@@ -36,8 +36,9 @@ directory = .coverage_report
 [flake8]
 max-line-length = 100
 # black contradicts W503
+# D107 is for missing docstring in __init__, which isn't a problem if the args are listed in the class docstring
 # the rest just seem overly picky, which obscures real problems
-ignore = W503,E203,E225,E301,E302,E501,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293
+ignore = W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293
 doctests = true
 exclude =  .git
            __pycache__/
