--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,7 @@ authors = [
 maintainers = "tool.tyrannosaurus.sources.authors"
 
 [tool.tyrannosuarus.paths]
-recipe             = "'recipes/${name}/meta.yml'"
+recipe             = "'recipes/${name}/meta.yaml'"
 environment        = "'environment.yml'"
 
 [tool.tyrannosaurus.targets]
@@ -159,4 +159,6 @@ statistics = true
 
 [pydocstyle]
 # 212 and 213 contradict; 203 and 204 contradict; D302 is not relevant in Py3
-ignore = ["D203", "D212", "D302"]
+# D107 isn't needed sometimes
+# and the rest are just too picky
+ignore = ["D107", "D200", "D203", "D205", "D212", "D302", "D400", "D403", "D409", "D411"]
