--- a/tyrannosaurus/resources/tox.ini
+++ b/tyrannosaurus/resources/tox.ini
@@ -19,7 +19,7 @@ commands =
     poetry check
     poetry build
     poetry install -v
-    poetry run pytest --cov
+    poetry run pytest --cov ${pkg}
     - poetry run flake8 ${pkg}
     - poetry run flake8 docs
     - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293 tests
