--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -1,9 +1,6 @@
-name: Build & test
+name: Build & test on master
 on:
     push:
-        branches:
-            - master
-    pull_request:
         branches:
             - master
 jobs:
@@ -38,6 +35,7 @@ jobs:
                     docker build .
             -
                 name: Run coveralls
-                # the || true is because coveralls returns a nonzero exit code on warnings, etc.
                 run: |
+                    pip install coveralls codecov
                     coveralls || true
+                    codecov || true
