--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ build-backend = "poetry.masonry.api"
 
 [tool.poetry]
 name = "tyrannosaurus"
-version = "0.7.0"
+version = "0.8.0"
 description = "Opinionated Python template and metadata synchronizer for 2020."
 authors = ["Douglas Myers-Turnbull"]
 maintainers = ["Douglas Myers-Turnbull"]
@@ -70,7 +70,7 @@ authors = [
 maintainers = "tool.tyrannosaurus.sources.authors"
 
 [tool.tyrannosuarus.paths]
-recipe             = "'recipes/${name}/meta.yml'"
+recipe             = "'recipes/${name}/meta.yaml'"
 environment        = "'environment.yml'"
 
 [tool.tyrannosaurus.targets]
@@ -103,7 +103,7 @@ python                   = ">=3.8, <4"
 tomlkit                  = ">=0.5, <1.0"
 typer                    = ">=0.3, <1.0"
 requests                 = "^2"
-grayskull                = ">=0.8, <1.0"
+grayskull                = ">=0.8.1, <1.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit               = "^2"
@@ -119,14 +119,12 @@ black                    = "=19.10b0"
 isort                    = "^5"
 flake8-bandit            = "^2"
 flake8-bugbear           = "^20"
-coveralls                = "^2"
 
 [tool.poetry.extras]
 # auto-filled from dev-deps
 dev     = [
         "pre-commit", "pytest", "coverage", "pytest-cov",
         "sphinx", "sphinx-autoapi",
-        "mypy",
         "flake8", "flake8-docstrings",
         "black", "isort",
         "flake8-bandit", "flake8-bugbear"
@@ -159,4 +157,6 @@ statistics = true
 
 [pydocstyle]
 # 212 and 213 contradict; 203 and 204 contradict; D302 is not relevant in Py3
-ignore = ["D203", "D212", "D302"]
+# D107 isn't needed sometimes
+# and the rest are just too picky
+ignore = ["D107", "D200", "D203", "D205", "D212", "D302", "D400", "D403", "D409", "D411"]
