Removed dependencies and cleaned up code.

--- a/tyrannosaurus/resources/tox.ini
+++ b/tyrannosaurus/resources/tox.ini
@@ -11,6 +11,9 @@ whitelist_externals =
     poetry
     pre-commit
 skipdist = True
+# If you your project contains extras (as in [tool.poetry.extras]),
+# then add an `all` dependency list containing all of the extras (except dev),
+# and add `--extras all` to `poetry install -v` below.
 # the - prefix means ignore nonzero exit codes
 commands =
     pre-commit run check-toml
