--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -1,41 +1,38 @@
-name: Build & test on master
+name: Build & test on main
 on:
-    push:
-        branches:
-            - master
+  push:
+    branches:
+      - master
+      - main
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        strategy:
-            max-parallel: 1
-            matrix:
-                python-version:
-                    - 3.8
-        steps:
-            -
-                name: Checkout
-                uses: actions/checkout@v2
-            -
-                name: 'Set up Python ${{ matrix.python-version }}'
-                uses: actions/setup-python@v2
-                with:
-                    python-version: '${{ matrix.python-version }}'
-            -
-                name: Install build dependencies
-                run: |
-                    python -m pip install --upgrade pip
-                    pip install poetry tox pre-commit
-            -
-                name: Test with tox
-                run: |
-                    tox -v
-            -
-                name: Build the Docker image
-                run: |
-                    docker build .
-            -
-                name: Run coveralls
-                run: |
-                    pip install coveralls codecov
-                    coveralls || true
-                    codecov || true
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 1
+      matrix:
+        python-version:
+          # from tyrannosaurus "pymetaversion"; actual versions are handled in Tox
+          - 3.9
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: 'Set up Python ${{ matrix.python-version }}'
+        uses: actions/setup-python@v2
+        with:
+          python-version: '${{ matrix.python-version }}'
+      - name: Install build dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade virtualenv
+          pip install poetry tox pre-commit
+      - name: Test with tox
+        run: |
+          tox -v
+      - name: Build the Docker image
+        run: |
+          docker build .
+      - name: Run coveralls
+        run: |
+          pip install coveralls codecov
+          coveralls || true
+          codecov || true
