--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -1,18 +1,17 @@
 on:
-    push:
-        branches:
-            - master
+  push:
+    branches:
+      - master
+      - main
 name: Generate labels
 jobs:
-    labels:
-        name: DefaultLabelsActions
-        runs-on: ubuntu-latest
-        steps:
-            -
-                name: Checkout
-                uses: actions/checkout@v2
-            -
-                name: Create labels
-                uses: lannonbr/issue-label-manager-action@2.0.0
-                env:
-                    GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+  labels:
+    name: DefaultLabelsActions
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Create labels
+        uses: lannonbr/issue-label-manager-action@2.0.0
+        env:
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
