--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,45 +1,40 @@
 name: Publish
 on:
-    release:
-        types:
-            - published
-    repository_dispatch:
-        types:
-            - release-made
+  release:
+    types:
+      - published
+  repository_dispatch:
+    types:
+      - release-made
 jobs:
-    deploy:
-        runs-on: ubuntu-latest
-        steps:
-            -
-                name: Checkout
-                uses: actions/checkout@v2
-            -
-                name: Set up Python
-                uses: actions/setup-python@v2
-                with:
-                    python-version: 3.8
-            -
-                name: Install build dependencies
-                run: |
-                    python -m pip install --upgrade pip
-                    pip install poetry tox
-            -
-                name: Build and install with Poetry
-                run: |
-                    poetry build
-                    poetry install
-            -
-                name: Build the Docker image
-                run: |
-                    docker build .
-            -
-                name: Upload the artifacts
-                uses: skx/github-action-publish-binaries@master
-                with:
-                    args: 'dist/*'
-                env:
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            -
-                name: Publish on PyPi
-                run: |
-                    poetry publish -vv --username __token__ --password ${{ secrets.PYPI_TOKEN }}
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          # from tyrannosaurus "pymetaversion"; actual versions are handled in Tox
+          python-version: 3.9
+      - name: Install build dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade virtualenv
+          pip install poetry tox
+      - name: Build and install with Poetry
+        run: |
+          poetry build
+          poetry install
+      - name: Build the Docker image
+        run: |
+          docker build .
+      - name: Upload the artifacts
+        uses: skx/github-action-publish-binaries@master
+        with:
+          args: 'dist/*'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish on PyPi
+        run: |
+          poetry publish -vv --username __token__ --password ${{ secrets.PYPI_TOKEN }}
