--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -1,29 +1,27 @@
 name: Build & test on pull
 on:
-    pull_request:
+  pull_request:
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        strategy:
-            max-parallel: 1
-            matrix:
-                python-version:
-                    - 3.8
-        steps:
-            -
-                name: Checkout
-                uses: actions/checkout@v2
-            -
-                name: 'Set up Python ${{ matrix.python-version }}'
-                uses: actions/setup-python@v2
-                with:
-                    python-version: '${{ matrix.python-version }}'
-            -
-                name: Install build dependencies
-                run: |
-                    python -m pip install --upgrade pip
-                    pip install poetry tox pre-commit
-            -
-                name: Test with tox
-                run: |
-                    tox -v
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 1
+      matrix:
+        python-version:
+          # from tyrannosaurus "pymetaversion"; actual versions are handled in Tox
+          - 3.9
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: 'Set up Python ${{ matrix.python-version }}'
+        uses: actions/setup-python@v2
+        with:
+          python-version: '${{ matrix.python-version }}'
+      - name: Install build dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade virtualenv
+          pip install poetry tox pre-commit
+      - name: Test with tox
+        run: |
+          tox -v
