--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,51 +1,43 @@
-minimum_pre_commit_version: 2.3.0
+minimum_pre_commit_version: 2.9.0
 
 repos:
-    -
-        repo: meta
-        hooks:
-            - id: check-hooks-apply
-            - id: check-useless-excludes
-    -
-        repo: 'https://github.com/psf/black'
-        rev: stable
-        hooks:
-            -
-                id: black
-    -
-        repo: 'https://github.com/pre-commit/pre-commit-hooks'
-        rev: v3.2.0
-        hooks:
-            -
-                id: trailing-whitespace
-            -
-                id: end-of-file-fixer
-            -
-                id: debug-statements
-            -
-                id: check-builtin-literals
-            -
-                id: check-toml
-                name: Check Toml
-                description: Toml file syntax errors
-                entry: check-toml
-                language: python
-                types:
-                    - toml
-            -
-                id: check-yaml
-                name: Check Yaml
-                description: Yaml file syntax errors
-                entry: check-yaml
-                language: python
-                types:
-                    - yaml
-                exclude: ^recipes/.*
-            -
-                id: check-json
-                name: Check JSON
-                description: JSON file syntax errors
-                entry: check-json
-                language: python
-                types:
-                    - json
+  - repo: meta
+    hooks:
+      - id: check-hooks-apply
+      # this is useful but problematic
+      # e.g. excluding recipes/*.yml, if they exist
+      # - id: check-useless-excludes
+  - repo: 'https://github.com/psf/black'
+    rev: stable
+    hooks:
+      - id: black
+  - repo: 'https://github.com/pre-commit/pre-commit-hooks'
+    rev: v3.4.0
+    hooks:
+      - id: trailing-whitespace
+      - id: fix-byte-order-marker
+      - id: end-of-file-fixer
+      - id: debug-statements
+      - id: check-builtin-literals
+      - id: check-toml
+        name: Check Toml
+        description: Toml file syntax errors
+        entry: check-toml
+        language: python
+        types:
+          - toml
+      - id: check-yaml
+        name: Check Yaml
+        description: Yaml file syntax errors
+        entry: check-yaml
+        language: python
+        types:
+          - yaml
+        exclude: ^recipes/.*
+      - id: check-json
+        name: Check JSON
+        description: JSON file syntax errors
+        entry: check-json
+        language: python
+        types:
+          - json
