--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,6 @@ envlist = py39
 [testenv]
 whitelist_externals =
     poetry
-    pre-commit
 skipdist = True
 # the - prefix means ignore nonzero exit codes
 commands =
@@ -18,6 +17,8 @@ commands =
     pre-commit run check-yaml
     pre-commit run check-json
     poetry run pytest --cov-report term-missing --cov=tyrannosaurus tests/
+    poetry run bandit -r tyrannosaurus
+    poetry run bandit -r test --skip B101
     - poetry run flake8 tyrannosaurus
     - poetry run flake8 docs
     - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293 tests
