--- a/tyrannosaurus/resources/tox.ini
+++ b/tyrannosaurus/resources/tox.ini
@@ -1,28 +1,32 @@
 [tox]
 minversion = 3.20
+isolated_build = True
 # this refers to [tool.poetry.extras.dev] in pyproject.toml
 extras = dev
-isolated_build = True
 # which Python version to use
 envlist = py39
 
 [testenv]
+# We must whitelist tools that are called before installing the package
+# (Poetry is listed in [build-system], but that won't help because we call it directly.)
+# Tools like pre-commit and flake8 will have the necessary version from dev-deps
 whitelist_externals =
     poetry
-    pre-commit
 skipdist = True
 # If you your project contains extras (as in [tool.poetry.extras]),
 # then add an `all` dependency list containing all of the extras (except dev),
 # and add `--extras all` to `poetry install -v` below.
 # the - prefix means ignore nonzero exit codes
 commands =
-    pre-commit run check-toml
-    pre-commit run check-yaml
-    pre-commit run check-json
     poetry check
     poetry build
     poetry install -v
+    poetry run pre-commit run check-toml
+    poetry run pre-commit run check-yaml
+    poetry run pre-commit run check-json
     poetry run pytest --cov-report term-missing --cov=${pkg} tests/
+    poetry run bandit -r ${pkg}
+    poetry run bandit -r test
     - poetry run flake8 ${pkg}
     - poetry run flake8 docs
     - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293 tests
@@ -38,9 +42,6 @@ directory = .coverage_report
 
 [flake8]
 max-line-length = 100
-# black contradicts W503
-# D107 is for missing docstring in __init__, which isn't a problem if the args are listed in the class docstring
-# the rest just seem overly picky, which obscures real problems
 ignore = W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293
 doctests = true
 exclude =  .git
