--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -1,9 +1,9 @@
+name: Create Github labels
 on:
   push:
     branches:
       - master
       - main
-name: Generate labels
 jobs:
   labels:
     name: DefaultLabelsActions
