--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish
+name: Publish on release creation
 on:
   release:
     types:
@@ -17,24 +17,22 @@ jobs:
         with:
           # from tyrannosaurus "pymetaversion"; actual versions are handled in Tox
           python-version: 3.9
-      - name: Install build dependencies
+      - name: Install build meta-dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install --upgrade virtualenv
-          pip install poetry tox
-      - name: Build and install with Poetry
+          pip install poetry
+      - name: Build sdists and wheels with Poetry
         run: |
           poetry build
           poetry install
       - name: Build the Docker image
         run: |
           docker build .
-      - name: Upload the artifacts
+      - name: Attach artifacts to the Github release
         uses: skx/github-action-publish-binaries@master
         with:
           args: 'dist/*'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Publish on PyPi
+      - name: Publish to PyPi
         run: |
           poetry publish -vv --username __token__ --password ${{ secrets.PYPI_TOKEN }}
