--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,7 +129,6 @@ pre-commit               = ">=2.9, <3.0"
 pre-commit-hooks         = ">=3.4, <4.0"
 bandit                   = ">=1.7, <2.0"
 black                    = "=20.8b1"
-isort                    = "^5"
 pytest                   = "^6"
 coverage                 = {extras = ["toml"], version = "^5"}
 pytest-cov               = "^2"
@@ -143,7 +142,7 @@ sphinx-rtd-theme         = ">=0.5, <1.0"
 [tool.poetry.extras]
 dev = [
     "pre-commit", "pre-commit-hooks",
-    "black", "isort", "bandit",
+    "black", "bandit",
     "pytest", "coverage", "pytest-cov",
     "flake8", "flake8-docstrings", "flake8-bugbear",
     "sphinx", "sphinx-autoapi"
