--- a/tests/resources/fake/pyproject.toml
+++ b/tests/resources/fake/pyproject.toml
@@ -101,11 +101,9 @@ mypy                     = "^0.750"
 flake8                   = "^3.7"
 flake8-docstrings        = "^1.5"
 black                    = "=19.10b0"
-isort                    = "^4.3"
 sphinx-autodoc-typehints = "^1.10"
 xdoctest                 = "^0.12"
 hypothesis               = "^5.10"
-flake8-bandit            = "^2.1"
 flake8-bugbear           = "^20.1"
 
 
@@ -117,9 +115,8 @@ dev     = [
         "pre-commit", "pytest", "coverage", "xdoctest", "hypothesis",
         "sphinx", "sphinx-autodoc-typehints", "sphinx-autoapi",
         "mypy",
-        "flake8", "flake8-docstrings",
-        "black", "isort",
-        "flake8-bandit", "flake8-bugbear"
+        "flake8", "flake8-docstrings", "flake8-bugbear",
+        "black",
 ]
 
 
