--- a/pyproject.toml
+++ b/pyproject.toml
@@ -135,6 +135,7 @@ pytest-cov               = "^2"
 flake8                   = "^3"
 flake8-docstrings        = "^1"
 flake8-bugbear           = "^20"
+mypy                     = ">=0.790, <1.0"
 sphinx                   = "^3"
 sphinx-autoapi           = "^1"
 sphinx-rtd-theme         = ">=0.5, <1.0"
@@ -145,6 +146,7 @@ dev = [
     "black", "bandit",
     "pytest", "coverage", "pytest-cov",
     "flake8", "flake8-docstrings", "flake8-bugbear",
+    "mypy",
     "sphinx", "sphinx-autoapi"
 ]
 
