Delete trash at the end of tox.

--- a/tyrannosaurus/resources/tox.ini
+++ b/tyrannosaurus/resources/tox.ini
@@ -34,6 +34,8 @@ commands =
     - mypy test
     - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293 tests
     sphinx-build -b html docs docs/html
+    - rm -r ${pkg}.egg-info
+    - rm -r .pytest_cache
 
 
 [coverage:run]
