--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -1,4 +1,4 @@
-name: Test and update badges on push to main
+name: Build & test
 on:
   push:
     branches:
@@ -26,6 +26,7 @@ jobs:
           languages: python
       - name: Install build dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install tox poetry
       - name: Test with tox
         run: |
