--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -19,6 +19,7 @@ jobs:
           python-version: '${{ matrix.python-version }}'
       - name: Install build meta-dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install tox poetry
       - name: Test with tox
         run: |
