--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,12 @@ commands =
     - poetry run flake8 docs
     - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293 tests
     sphinx-build -b html docs docs/html
+    - rm -r tyrannosaurus.egg-info
+    - rm -r .pytest_cache
+    - rm -r tests/.pytest_cache
+    - rm -r .tyrannosaurus
+    - rm -r eggs
+    - rm -r cython_debug
 
 
 [coverage:run]
