--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -27,7 +27,8 @@ jobs:
       - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install tox poetry
+          pip install --upgrade virtualenv
+          pip install poetry tox pre-commit
       - name: Test with tox
         run: |
           tox -v
