--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -20,15 +20,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '${{ matrix.python-version }}'
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v1
-        with:
-          languages: python
       - name: Install build dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install --upgrade virtualenv
-          pip install poetry tox pre-commit
+          pip install poetry tox
       - name: Test with tox
         run: |
           tox -v
@@ -40,5 +34,3 @@ jobs:
           pip install coveralls codecov
           coveralls || true
           codecov || true
-      - name: Run Github CodeQL
-        uses: github/codeql-action/analyze@v1
